--- a/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
@@ -27,7 +27,8 @@
             });
 </script>
 <div class="w3-row w3-center fontup">
-    <a href="~/TimeSchedule/DSchedule" style="color:blue;font-size:20px">ภาควิชา |</a>
+    <a href="~/TimeSchedule/DSchedule" style="color:blue;font-size:20px">สาขาวิชา |</a>
+    <a href="~/TimeSchedule/PSchedule" style="color:blue;font-size:20px">ผู้สอน |</a>
     <a href="~/TimeSchedule/ClSchedule" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
     <a href="~/TimeSchedule/TeSchedule" style="color:blue;font-size:20px">วิชาเรียน</a>
 </div>
