--- a/TestExcel/Views/Data/Section.cshtml
+++ b/TestExcel/Views/Data/Section.cshtml
@@ -10,8 +10,8 @@
     <a href="~/Data/Branch" style="color:blue;font-size:20px">สาขาวิชา |</a>
     <a href="~/Data/Building" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
     <a href="~/Data/Department" style="color:blue;font-size:20px">ภาควิชา |</a>
-    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ |</a>
-    <a href="~/Data/Member" style="color:blue;font-size:20px">User</a>
+    <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ </a>
+    @*<a href="~/Data/Member" style="color:blue;font-size:20px">User</a>*@
 </div>
     <br>
     <div class="container">
