--- a/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
+++ b/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
@@ -17,7 +17,7 @@
         <div class="w3-row w3-center fontup">
             <a href="@Url.Action("DSchedule","TimeSchedule")" style="color:blue;font-size:20px">ตารางเรียน</a> |
             <a href="@Url.Action("data","Report")" style="color:blue;font-size:20px">ดาวน์โหลด/อัพโหลด PDF/Excel</a> |
-            <a href="@Url.Action("Section","Data")" style="color:blue;font-size:20px">แก้ไขข้อมูล</a> 
+            <a href="@Url.Action("Section","Data")" style="color:blue;font-size:20px">ฐานข้อมูล</a> 
         </div>
         @RenderBody()
         <hr />
