--- a/TestExcel/Views/Data/Building.cshtml
+++ b/TestExcel/Views/Data/Building.cshtml
@@ -10,6 +10,7 @@
     <a href="~/Data/Subject" style="color:blue;font-size:20px">วิชาเรียน |</a>
     <a href="~/Data/Branch" style="color:blue;font-size:20px">สาขาวิชา |</a>
     <a href="~/Data/Building" style="color:blue;font-size:20px">อาคาร/ห้องเรียน |</a>
+    <a href="~/Data/Course" style="color:blue;font-size:20px">หลักสูตร |</a>
     <a href="~/Data/Department" style="color:blue;font-size:20px">ภาควิชา |</a>
     <a href="~/Data/Professor" style="color:blue;font-size:20px">อาจารย์ </a>
     @*<a href="~/Data/Member" style="color:blue;font-size:20px">User</a>*@
