--- a/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
@@ -123,7 +123,7 @@ else
                         var WhereTimeDate = Model.Item1.Where(x => Math.Floor(decimal.Parse(x.SECTION_TIME_START.ToString())) == b && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM == classroom);
                         var check = WhereTimeDate.LastOrDefault();
                         var Bcolor = Model.Item1.Where(x => x.SUBJECT_CREDIT == "3(3-0-6)").Any();
-                        if (check != null && check.SUBJECT_CREDIT == "3(3-0-6)")
+                        if (check != null && check.SUBJECT_CREDIT.Contains("-0-"))
                         {
                             color = "#25b0ee";
                         }
