--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -121,7 +121,7 @@
 
                     $("#notiContent").append($('<li><a href="/TimeSchedule/TeSchedule/' + value.SECTION_ID_First + '/' + value.SECTION_CLASSROOM_First + '?SUBJECTid='
                         + value.SUBJECT_ID_First + "_" + value.SUBJECT_ID_Last + '&BR_SEMESTER=' + value.SEMESTER + '&BR_YEAR='
-                        + value.YEAR + '&color=#ff0000">'
+                        + value.YEAR + '">'
                         + value.SUBJECT_ID_First + " " + datethai[parseInt(tmp_datefirst)] + " ตอน "
                         + value.SECTION_NUMBER_First + " ห้อง " + value.SECTION_CLASSROOM_First + " เวลา " + value.SECTION_TIME_START_First + ".00-" + value.SECTION_TIME_END_First + ".00 " + value.SEMESTER + "/" + value.YEAR + "<br>"
                         + value.SUBJECT_ID_Last + " "+ datethai[parseInt(tmp_datelast)]
@@ -140,7 +140,8 @@
                 $("#PSingleSave").submit();
             });
             var Arraydata = "@dataID";
-            $("#save_all").click(function () {
+        $("#save_all").click(function () {
+            $("#res").html("");
                 $.ajax({
                     type: 'POST',
                     url: '/data/Warning',
@@ -167,6 +168,7 @@
                 });
         });
         $("#save").click(function () {
+            $("#ress").html("");
             if ($("#FIRST_SECTION_ID").val() != null || ("#FIRST_SECTION_ID").val() != "" ) {
                 $.ajax({
                     type: 'POST',
