--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -49,11 +49,6 @@
                     $("#ErrorAlert").hide("fade");
             }, 3000);
         }
-        num = ""+ @number +"";
-        if (num != "") {
-                $("#TableLocation2 tr td div #searchId[value='" + num + "']").parent().css('background-color', '#ff0000');
-                $("#TableLocation2 tr td div #searchId[value='" + num + "']").parent().css('color', 'white');
-        }
     });
 
 </script>
@@ -96,7 +91,7 @@ else
                     <td colspan="5" style="padding-right:1em">
                         @Html.DropDownList("SUBJECT_NAME", (SelectList)ViewBag.ddl_Subject_Name, new { @class = "form-control", style = "", disabled = "disabled" })
                     </td>
-                    <td align="right"><b>วิชา&nbsp;</b></td>
+                    <td align="right"><b>ห้อง&nbsp;</b></td>
                     <td colspan="5" style="padding-right:1em">
                         <select class="form-control" id="ddl_classroom" name="ddl_classroom" style="width:120px">
                             @foreach (var item in ViewBag.DDL_building)
@@ -240,8 +235,10 @@ else
 @using (Html.BeginForm("singleupdatedata", "TimeSchedule", FormMethod.Post, new { id = "PSingleSave", name = "PSingleSave" }))
 {
     @Html.Hidden("SUBJECTid", Subject_id);
+    @Html.Hidden("SEC_ID2", number)
     @Html.Hidden("Semester", SEMESTER)
     @Html.Hidden("Year", YEAR)
+    @Html.Hidden("CLASSROOM", CLASSROOM)
     <div class="w3-row">
         <div class="col-lg-6 w3-container w3-card space" style="padding-bottom:5px;background-color:#25b0ee">
             <table border="0" align="center" style="border-collapse:separate;border-spacing:5px">
@@ -440,13 +437,21 @@ else
                         var tid = date[a] + "id_" + b;
                         var WhereTimeDate = Model.Where(x => Math.Floor(decimal.Parse(x.SECTION_TIME_START.ToString())) == b && x.SECTION_DATE == date[a]);
                         var check = WhereTimeDate.LastOrDefault();
-                        if (check != null && check.SUBJECT_CREDIT.Contains("-0-"))
+                        if (check != null && check.CRASH == "1")
                         {
                             color = "#25b0ee";
                         }
-                        else
+                        else if (check != null && check.CRASH == "2")
                         {
                             color = "#D3D3D3";
+                        }
+                        else if (check != null && check.CRASH == "3")
+                        {
+                            color = "#ff0000";
+                        }
+                        else
+                        {
+                            color = "white";
                         }
                         var check1 = Model.Where(x => Math.Floor(decimal.Parse(x.SECTION_TIME_START.ToString())) <= b && Math.Floor(decimal.Parse(x.SECTION_TIME_END.ToString())) > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
                         if (check != null)
